About and Contact Pages Updated.

--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -3,5 +3,6 @@
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
-
-<p>Use this area to provide additional information.</p>
+<p>Project developed as an exercise from the <strong>C#</strong> course by <a href="https://www.udemy.com/course/programacao-orientada-a-objetos-csharp/" target="_blank">Nélio Alves</a>.</p>
+<p>Additional Info: <a href="https://github.com/manoel-alves/Projeto_SalesWebMvc">Github Project Page</a>.</p>
+<p>By: @ViewData["Author"]</p>
