--- a/SalesWebMvc/Views/Home/Contact.cshtml
+++ b/SalesWebMvc/Views/Home/Contact.cshtml
@@ -1,17 +1,12 @@
 ﻿@{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Contacts";
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Mail me:</strong> <a href="mailto:manoelann@hotmail.com">manoelann@hotmail.com</a><br />
+    <strong>Text me:</strong> <a href="https://t.me/manoel_alvess" target="_blank">Telegram</a><br />
+    <strong>Follow me:</strong> <a href="https://linkedin.com/in/manoel-alves" target="_blank">Linkedin</a><br />
+    <strong>Other Projects:</strong> <a href="https://github.com/manoel-alves" target="_blank">Github</a>
 </address>
